tests/neg/named-tuples.check
-- Error: tests/neg/named-tuples.scala:9:19 ----------------------------------------------------------------------------
9 |  val illformed = (_2 = 2) // error
  |                   ^^^^^^
  |                   _2 cannot be used as the name of a tuple element because it is a regular tuple selector
-- Error: tests/neg/named-tuples.scala:10:20 ---------------------------------------------------------------------------
10 |  type Illformed = (_1: Int) // error
   |                    ^^^^^^^
   |                    _1 cannot be used as the name of a tuple element because it is a regular tuple selector
-- Error: tests/neg/named-tuples.scala:11:40 ---------------------------------------------------------------------------
11 |  val illformed2 = (name = "", age = 0, name = true)  // error
   |                                        ^^^^^^^^^^^
   |                                        Duplicate tuple element name
-- Error: tests/neg/named-tuples.scala:12:45 ---------------------------------------------------------------------------
12 |  type Illformed2 = (name: String, age: Int, name: Boolean) // error
   |                                             ^^^^^^^^^^^^^
   |                                             Duplicate tuple element name
-- [E007] Type Mismatch Error: tests/neg/named-tuples.scala:20:20 ------------------------------------------------------
20 |  val _: NameOnly = person // error
   |                    ^^^^^^
   |                    Found:    (Test.person : (name : String, age : Int))
   |                    Required: Test.NameOnly
   |
   | longer explanation available when compiling with `-explain`
-- [E007] Type Mismatch Error: tests/neg/named-tuples.scala:21:18 ------------------------------------------------------
21 |  val _: Person = nameOnly // error
   |                  ^^^^^^^^
   |                  Found:    (Test.nameOnly : (name : String))
   |                  Required: Test.Person
   |
   | longer explanation available when compiling with `-explain`
-- [E172] Type Error: tests/neg/named-tuples.scala:22:41 ---------------------------------------------------------------
22 |  val _: Person = (name = "") ++ nameOnly // error
   |                                         ^
   |    Cannot prove that Tuple.Disjoint[Tuple1[("name" : String)], Tuple1[("name" : String)]] =:= (true : Boolean).
-- [E008] Not Found Error: tests/neg/named-tuples.scala:23:9 -----------------------------------------------------------
23 |  person._1 // error
   |  ^^^^^^^^^
   |  value _1 is not a member of (name : String, age : Int)
-- [E007] Type Mismatch Error: tests/neg/named-tuples.scala:25:36 ------------------------------------------------------
25 |  val _: (age: Int, name: String) = person // error
   |                                    ^^^^^^
   |                                    Found:    (Test.person : (name : String, age : Int))
   |                                    Required: (age : Int, name : String)
   |
   | longer explanation available when compiling with `-explain`
-- Error: tests/neg/named-tuples.scala:27:17 ---------------------------------------------------------------------------
27 |  val (name = x, agee = y) = person // error
   |                 ^^^^^^^^
   |                 No element named `agee` is defined in selector type (name : String, age : Int)
-- Error: tests/neg/named-tuples.scala:30:10 ---------------------------------------------------------------------------
30 |    case (name = n, age = a) => () // error // error
   |          ^^^^^^^^
   |          No element named `name` is defined in selector type (String, Int)
-- Error: tests/neg/named-tuples.scala:30:20 ---------------------------------------------------------------------------
30 |    case (name = n, age = a) => () // error // error
   |                    ^^^^^^^
   |                    No element named `age` is defined in selector type (String, Int)
-- [E172] Type Error: tests/neg/named-tuples.scala:32:27 ---------------------------------------------------------------
32 |  val pp = person ++ (1, 2)  // error
   |                           ^
   |            Cannot prove that Tuple.Disjoint[(("name" : String), ("age" : String)), Tuple] =:= (true : Boolean).
-- [E172] Type Error: tests/neg/named-tuples.scala:35:18 ---------------------------------------------------------------
35 |  person ++ (1, 2) match // error
   |                  ^
   |            Cannot prove that Tuple.Disjoint[(("name" : String), ("age" : String)), Tuple] =:= (true : Boolean).
-- Error: tests/neg/named-tuples.scala:38:17 ---------------------------------------------------------------------------
38 |  val bad = ("", age = 10) // error
   |                 ^^^^^^^^
   |                 Illegal combination of named and unnamed tuple elements
-- Error: tests/neg/named-tuples.scala:41:20 ---------------------------------------------------------------------------
41 |    case (name = n, age) => () // error
   |                    ^^^
   |                    Illegal combination of named and unnamed tuple elements
-- Error: tests/neg/named-tuples.scala:42:16 ---------------------------------------------------------------------------
42 |    case (name, age = a) => () // error
   |                ^^^^^^^
   |                Illegal combination of named and unnamed tuple elements
-- Error: tests/neg/named-tuples.scala:45:10 ---------------------------------------------------------------------------
45 |    case (age = x) => // error
   |          ^^^^^^^
   |          No element named `age` is defined in selector type Tuple
-- [E172] Type Error: tests/neg/named-tuples.scala:47:27 ---------------------------------------------------------------
47 |  val p2 = person ++ person // error
   |                           ^
   |Cannot prove that Tuple.Disjoint[(("name" : String), ("age" : String)), (("name" : String), ("age" : String))] =:= (true : Boolean).
-- [E172] Type Error: tests/neg/named-tuples.scala:48:43 ---------------------------------------------------------------
48 |  val p3 = person ++ (first = 11, age = 33) // error
   |                                           ^
   |Cannot prove that Tuple.Disjoint[(("name" : String), ("age" : String)), (("first" : String), ("age" : String))] =:= (true : Boolean).
-- [E007] Type Mismatch Error: tests/neg/named-tuples.scala:50:22 ------------------------------------------------------
50 |  val p5 = person.zip((first = 11, age = 33)) // error
   |                      ^^^^^^^^^^^^^^^^^^^^^^
   |                      Found:    (first : Int, age : Int)
   |                      Required: NamedTuple.NamedTuple[(("name" : String), ("age" : String)), Tuple]
   |
   | longer explanation available when compiling with `-explain`
-- [E007] Type Mismatch Error: tests/neg/named-tuples.scala:61:32 ------------------------------------------------------
61 |  val typo: (name: ?, age: ?) = (name = "he", ag = 1) // error
   |                                ^^^^^^^^^^^^^^^^^^^^^
   |                                Found:    (name : String, ag : Int)
   |                                Required: (name : ?, age : ?)
   |
   | longer explanation available when compiling with `-explain`
-- Warning: tests/neg/named-tuples.scala:27:29 -------------------------------------------------------------------------
27 |  val (name = x, agee = y) = person // error
   |                             ^^^^^^
   |pattern's type (String, Int) is more specialized than the right hand side expression's type (name : String, age : Int)
   |
   |If the narrowing is intentional, this can be communicated by adding `: @unchecked` after the expression,
   |which may result in a MatchError at runtime.
   |This patch can be rewritten automatically under -rewrite -source 3.2-migration.
